test/tests/bad/redundant-case.carth
;; RedundantCase

(define foo
  (fmatch
    (case True 0)
    (case True 1)
    (case False 2)))
